--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ hr {
     display: flex;
     gap: 25px;
     align-items: stretch;
-    margin-top: 25px;
+    margin-top: 45px;
     margin-bottom: 25px;
 }
 
@@ -160,7 +160,6 @@ hr {
     flex: 2;
 }
 
-
 /* Contact List */
 .contact-list {
     list-style-type: none;
@@ -175,7 +174,11 @@ ul {
     padding-left: 20px;
 }
 
-/* ----- YENİ EKLENEN ÖZEL BOŞLUK SINIFI ----- */
 .space-above-lg {
-    margin-top: 60px !important; /* Standart boşluğu ezip büyük bir boşluk ekler */
+    margin-top: 60px !important;
+}
+
+/* Takım fotoğrafları gibi galerilerde alanı doldurmak için özel stil */
+.gallery-cover img {
+    object-fit: cover !important; /* Diğer galeri kuralını ezip alanı doldurmasını sağlar */
 }
